--- a/.github/workflows/upload-data.yaml
+++ b/.github/workflows/upload-data.yaml
@@ -25,7 +25,8 @@ jobs:
 
       - name: Run pipeline
         run: |
-          python src/pipeline.py
+          ls -la
+          python -m src.pipeline
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           IS_PROD: ${{ secrets.IS_PROD }}
