--- a/.github/workflows/upload-data.yaml
+++ b/.github/workflows/upload-data.yaml
@@ -27,8 +27,8 @@ jobs:
         run: |
           python src/pipeline.py
         env:
-          openai_api_key: ${{ secrets.openai_api_key }}
-          is_prod: ${{ secrets.is_prod }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          IS_PROD: ${{ secrets.IS_PROD }}
 
       - name: clone website
         run: |
